[package]
name = "rush_parser"
version = "0.1.0"
authors = ["David Kyle <david.kyle@gmail.com>"]
license = "MIT"
description = "lexer/parser for rush shell"

[dependencies]
regex = "0.2"
lazy_static = "0.2.2"
odds = "0.2.25"
plex = { git = "https://github.com/goffrie/plex" }

[dependencies.rush_pat]
path = "../rush_pat"
version = "*"
