[package]
name = "rush_rt"
version = "0.1.0"
authors = ["David Kyle <david.kyle@gmail.com>"]
license = "MIT"
description = "run-time types for rush shell"

[dependencies]
lazy_static = "0.2.2"
regex = "0.2.1"
num-traits = "0.1.14"

[dependencies.into_val_derive]
path = "../into_val_derive"
version = "0.1.0"

[dependencies.rush_pat]
path = "../rush_pat"
version = "0.1.0"

[dependencies.rush_parser]
path = "../rush_parser"
version = "0.1.0"
